Fix z-index in PostRecipients (again)

--- a/styles/forms.scss
+++ b/styles/forms.scss
@@ -59,7 +59,7 @@
       border-radius: 4px;
       border: 1px solid #66afe9;
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-      z-index: 20;
+      z-index: 2000;
     }
 
     &__menu-list {
